--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   cloud_firestore: ^4.15.8
   firebase_auth: ^4.17.8
   intl: 0.19.0
+  file_picker: ^8.0.7
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
